[gd_scene load_steps=4 format=2]

[ext_resource path="res://entidades/Vibora/Vibora.gd" type="Script" id=1]
[ext_resource path="res://entidades/Vibora/green.png" type="Texture" id=2]
[ext_resource path="res://entidades/Vibora/ComponenteEntradaJugador.gd" type="Script" id=3]

[node name="Vibora" type="Node2D" groups=[
"jugador",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ComponenteEntradaJugador" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MovimientoRetraso" type="Timer" parent="."]
wait_time = 0.08
one_shot = true
autostart = true
[connection signal="timeout" from="MovimientoRetraso" to="." method="_on_MovimientoRetraso_timeout"]
